Project Progress: Sprint 2 - Shopping Cart Page with CRUD Functionality Complete

--- a/ecommerceFE/src/styles.css
+++ b/ecommerceFE/src/styles.css
@@ -753,7 +753,7 @@ table.table.table-bordered {
 }
 
 table.table.table-bordered th {
-    BACKGROUND: #0da8e4;
+    BACKGROUND: #8C1627;
     color: #fff;
     font-size: 14px;
     padding: 7px
