--- a/ecommerceFE/src/app/app.component.html
+++ b/ecommerceFE/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
-      <a href="#">
+      <a routerLink="/products">
         <img
           width="90px"
           src="assets/images/logo-png.png"
