--- a/ecommerceFE/src/app/components/cart-details/cart-details.component.html
+++ b/ecommerceFE/src/app/components/cart-details/cart-details.component.html
@@ -69,6 +69,7 @@
                 <p>Total Quantity: {{ totalQuantity }}</p>
                 <p>Shipping: Free</p>
                 <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
+                <a routerLink="/checkout" class="btn btn-danger">Checkout</a>
               </td>
             </tr>
           </tbody>
