--- a/ecommerceFE/src/styles.css
+++ b/ecommerceFE/src/styles.css
@@ -95,7 +95,7 @@ h6 {
 a {
     display: inline-block;
     text-decoration: none;
-    
+
 }
 
 a:visited,
@@ -553,7 +553,7 @@ input.au-input.au-input-xl {
 }
 
 .main-content.page-m {
-    padding: 10% 15% !important
+    padding: 10% 30% 10% 5%
 }
 
 /* 
