--- a/ecommerceFE/src/app/components/checkout/checkout.component.html
+++ b/ecommerceFE/src/app/components/checkout/checkout.component.html
@@ -11,6 +11,24 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="firstName" type="text" />
+                <div
+                  *ngIf="
+                    firstName.invalid && (firstName.dirty || firstName.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="firstName.errors?.['required'] || firstName.errors?.['notOnlyWhiteSpace']"
+                  >
+                    First Name is required
+                  </div>
+
+                  <div
+                    *ngIf="firstName.errors?.['minlength'] && !firstName.errors?.['notOnlyWhiteSpace']"
+                  >
+                    First Name must be at least 2 characters long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -21,6 +39,24 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="lastName" type="text" />
+                <div
+                  *ngIf="
+                    lastName.invalid && (lastName.dirty || lastName.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="lastName.errors?.['required'] || lastName.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Last Name is required
+                  </div>
+
+                  <div
+                    *ngIf="lastName.errors?.['minlength'] && !lastName.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Last Name must be at least 2 characters long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -31,6 +67,18 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="email" type="text" />
+                <div
+                  *ngIf="email.invalid && (email.dirty || email.touched)"
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="email.errors?.['required']">
+                    Email is required
+                  </div>
+
+                  <div *ngIf="email.errors?.['pattern']">
+                    Email must be a valid email address format
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -52,6 +100,19 @@
                     {{ country.name }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    shippingAddressCountry.invalid &&
+                    (shippingAddressCountry.dirty ||
+                      shippingAddressCountry.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="shippingAddressCountry.errors?.['required']">
+                    Country is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -62,6 +123,20 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="street" type="text" />
+                <div
+                  *ngIf="
+                    shippingAddressStreet.invalid &&
+                    (shippingAddressStreet.dirty ||
+                      shippingAddressStreet.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="shippingAddressStreet.errors?.['required'] || shippingAddressStreet.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Street is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -72,6 +147,19 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="city" type="text" />
+                <div
+                  *ngIf="
+                    shippingAddressCity.invalid &&
+                    (shippingAddressCity.dirty || shippingAddressCity.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="shippingAddressCity.errors?.['required'] || shippingAddressCity.errors?.['notOnlyWhiteSpace']"
+                  >
+                    City is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -89,6 +177,17 @@
                     {{ state.name }}
                   </option>
                 </select>
+                <div
+                  *ngIf="
+                    shippingAddressState.invalid &&
+                    (shippingAddressState.dirty || shippingAddressState.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="shippingAddressState.errors?.['required']">
+                    State is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -99,6 +198,26 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="zipCode" type="text" />
+                <div
+                  *ngIf="
+                    shippingAddressZipCode.invalid &&
+                    (shippingAddressZipCode.dirty ||
+                      shippingAddressZipCode.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="shippingAddressZipCode.errors?.['required'] || shippingAddressZipCode.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Zip Code is required
+                  </div>
+
+                  <div
+                    *ngIf="shippingAddressZipCode.errors?.['minlength'] && !shippingAddressZipCode.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Zip Code must be at least 2 characters long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -132,6 +251,19 @@
                     {{ country.name }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    billingAddressCountry.invalid &&
+                    (billingAddressCountry.dirty ||
+                      billingAddressCountry.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="billingAddressCountry.errors?.['required']">
+                    Country is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -142,6 +274,19 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="street" type="text" />
+                <div
+                  *ngIf="
+                    billingAddressStreet.invalid &&
+                    (billingAddressStreet.dirty || billingAddressStreet.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="billingAddressStreet.errors?.['required'] || billingAddressStreet.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Street is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -152,6 +297,19 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="city" type="text" />
+                <div
+                  *ngIf="
+                    billingAddressCity.invalid &&
+                    (billingAddressCity.dirty || billingAddressCity.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="billingAddressCity.errors?.['required'] || billingAddressCity.errors?.['notOnlyWhiteSpace']"
+                  >
+                    City is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -169,6 +327,17 @@
                     {{ state.name }}
                   </option>
                 </select>
+                <div
+                  *ngIf="
+                    billingAddressState.invalid &&
+                    (billingAddressState.dirty || billingAddressState.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="billingAddressState.errors?.['required']">
+                    State is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -179,6 +348,26 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="zipCode" type="text" />
+                <div
+                  *ngIf="
+                    billingAddressZipCode.invalid &&
+                    (billingAddressZipCode.dirty ||
+                      billingAddressZipCode.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="billingAddressZipCode.errors?.['required'] || billingAddressZipCode.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Zip Code is required
+                  </div>
+
+                  <div
+                    *ngIf="billingAddressZipCode.errors?.['minlength'] && !billingAddressZipCode.errors?.['notOnlyWhiteSpace']"
+                  >
+                    Zip Code must be at least 2 characters long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -196,6 +385,17 @@
                   <option>Visa</option>
                   <option>Mastercard</option>
                 </select>
+                <div
+                  *ngIf="
+                    creditCardType.invalid &&
+                    (creditCardType.dirty || creditCardType.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="creditCardType.errors?.['required']">
+                    Credit card type is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -206,6 +406,26 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="nameOnCard" type="text" />
+                <div
+                  *ngIf="
+                    creditCardNameOnCard.invalid &&
+                    (creditCardNameOnCard.dirty || creditCardNameOnCard.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      creditCardNameOnCard.errors?.['required'] ||
+                      creditCardNameOnCard.errors?.['notOnlyWhitespace']
+                    "
+                  >
+                    Name is required
+                  </div>
+
+                  <div *ngIf="creditCardNameOnCard.errors?.['minlength']">
+                    Name must be at least 2 characters long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -216,6 +436,20 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="cardNumber" type="text" />
+                <div
+                  *ngIf="
+                    creditCardNumber.invalid &&
+                    (creditCardNumber.dirty || creditCardNumber.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="creditCardNumber.errors?.['required']">
+                    Card number is required
+                  </div>
+                  <div *ngIf="creditCardNumber.errors?.['pattern']">
+                    Card number must be 16 digits long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -226,6 +460,21 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="securityCode" type="text" />
+                <div
+                  *ngIf="
+                    creditCardSecurityCode.invalid &&
+                    (creditCardSecurityCode.dirty ||
+                      creditCardSecurityCode.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="creditCardSecurityCode.errors?.['required']">
+                    Security code is required
+                  </div>
+                  <div *ngIf="creditCardSecurityCode.errors?.['pattern']">
+                    Security code must be 3 digits long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
