--- a/ecommerceFE/src/app/components/login-status/login-status.component.html
+++ b/ecommerceFE/src/app/components/login-status/login-status.component.html
@@ -10,5 +10,11 @@
     Logout
   </button>
 
-  <button *ngIf="isAuthenticated" routerLink="/members" class="security-btn ms-1">Member</button>
+  <button *ngIf="isAuthenticated" routerLink="/members" class="security-btn ms-1">
+    Member
+  </button>
+
+  <button *ngIf="isAuthenticated" routerLink="/order-history" class="security-btn ms-1">
+    Orders
+  </button>
 </div>
